--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flex Turismos</title>
+    <title>Happy Travels</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
         <div class="flex-container menu">
-        <div><h1>FlexTurismos</h1></div>        
+        <div><h1>HappyTravels</h1></div>        
         <ul class="list-items">
             <li><a href="#quem-somos">Quem Somos</a></li>
             <li><a href="#servicos">Serviços</a></li>
@@ -21,7 +21,7 @@
 
     <div class="flex-container apresentacao">
         <div class="text-apresentacao">
-            <h1>Flex <br>Turismos</h1>
+            <h1>Happy <br>Travels</h1>
             <p>O melhor serviço para você!</p>
             <a href="" class="btn">Saiba Mais!</a>
         </div>
@@ -118,7 +118,7 @@
 
     <footer>
         <div class="flex-container footer">
-        <p>&copy; 2021 CSS Flexbox</p>
+        <p>&copy; 2022 HappyTravels</p>
         <p>Desenvolvido por: Aurelie Fomum</p>
         </div>
         
